[package]
name = "velodex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PyPI-compatible read-through cache and private-index overlay."
default-run = "velodex"

[features]
# End-to-end tests that drive real pip/uv/twine against a spawned velodex binary. Off by default
# (they need the clients and are not part of the coverage gate); CI runs them explicitly. `e2e` is
# the fast, hermetic matrix (velodex proxies a local fixture index — no external network, no flake);
# `e2e-live` adds smoke tests against the real pypi.org.
e2e = []
e2e-live = ["e2e"]
# `velodex self update`, for binaries installed by the release installers (curl / PowerShell).
# Only the dist release builds enable it: pip- and cargo-installed copies update through their own
# package manager, mirroring how uv gates its self-update.
self-update = ["dep:axoupdater"]

[dependencies]
axoupdater = { version = "0.10", default-features = false, features = ["github_releases", "blocking"], optional = true }
velodex-core.workspace = true
velodex-storage.workspace = true
velodex-upstream.workspace = true
velodex-http.workspace = true
velodex-web.workspace = true
axum.workspace = true
mimalloc.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[target.'cfg(unix)'.dependencies]
syslog-tracing = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
serde_json.workspace = true
zip.workspace = true
base64.workspace = true
sha2.workspace = true

[lints]
workspace = true
