[package]
name = "velox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PyPI-compatible read-through cache and private-index overlay."
default-run = "velox"

[dependencies]
velox-core.workspace = true
velox-storage.workspace = true
velox-upstream.workspace = true
velox-http.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[target.'cfg(unix)'.dependencies]
syslog-tracing = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true

[lints]
workspace = true
